removed bug-fix.... it breaks the rest of the website

--- a/Code/RestaurantManagementSoftware/application/style/style.css
+++ b/Code/RestaurantManagementSoftware/application/style/style.css
@@ -348,6 +348,6 @@ thead tr.filter input {
     padding-right: 5px; 
 }
 
-.dataTables_wrapper {
+div#orders_wrapper.dataTables_wrapper {
     z-index: -1;
 }
